Opened 15 years ago

Closed 15 years ago

#3262 closed bug (fixed)

File descriptors without a vnode aren't closed on unmount

Reported by: axeld Owned by: axeld
Priority: blocker Milestone: R1/alpha1
Component: System/Kernel Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If you unmount a volume that does not have any other open file descriptors, file descriptors without a vnode aren't disconnected from the fs_mount.

This will cause a page fault as soon as an application does anything with that descriptor, or quits.

Change History (2)

comment:1 by axeld, 15 years ago

Milestone: R1R1/alpha1
Priority: normalblocker

comment:2 by axeld, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28850.

Note: See TracTickets for help on using tickets.