* All file descriptors that only refer to a mount now keep the mount, ie. they   won't call put_mount() before they are freed. Internally, this causes them   to grab a reference to the mount's root vnode. * This fixes bug #3262.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28850 a95241bf-73f2-0310-859d-f6bbb57e9c96